# astro-poc

./: .gitignore  docker-compose.override.yml  pyproject.toml  requirements.txt  setup.cfg
.astro/: config.yaml
dags/: FinSum_openai.py
include/: helpers.py
