[tool.poetry]
name = "astro-poc"
version = "0.1.0"
description = ""
authors = ["Keith Bentrup <keith@keithbentrup.com>"]


[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.12.0"
openai = "^1.5.0"
pandas = "^2.1.4"
requests = "^2.31.0"
langchain = "^0.1.0"
beautifulsoup4 = "^4.12.2"
apache-airflow-providers-openai = "^1.1.0"
